--- a/src/index.css
+++ b/src/index.css
@@ -2,12 +2,8 @@
 body{
     display: flex;
     flex-direction: row;
-    margin:0;
-    
+    margin:0;  
     width: 100%;
-}
-#mainpg_background{
-    margin-left: -60px;
-    min-width: 43%;
-    z-index: -1;
+
+    background: #FFFFFF;
 }
