--- a/src/component/Menu.css
+++ b/src/component/Menu.css
@@ -13,7 +13,7 @@
   border-radius: 5px;
 }
 .Menu:hover{
-  border: 1px solid #555555;
+  border: 1px solid #b4b4b4;
   box-sizing: border-box;
 }
 
